# Server_QEC

./: .gitignore  README.md  pyproject.toml  test_idea.ipynb
BBCode/BivariateBicycleCodes/: decoder_run.py  decoder_setup.py  distance_test.py
SlidingWindowDecoder/: Sliding Window OSD.ipynb  gauss_decoder.py  setup.py
SlidingWindowDecoder/our_utils/: gauss_elimination.py  gauss_elimination_backup.py  gen_codes.py  test_decoder.py  utils.py
TMP/: mydata_72_12_p_0.003_cycles_6
decode/: gauss_decoder.py
decoder/: gauss_decoder.py
qldpcdecoder/: basis_compute.py  bpdecoders.py  codes.py  decoder.py  decoupleddecoder.py  gauss_decoder.py  homologydecoder.py  sparsedecoupleddecoder.py  sparsegauss_decoder.py  sparsegauss_decoderprior.py  timing.py  utils.py
results/: C_BBleft_BB_n72_k12.txt  THC_BBleft_BB_n72_k12.txt  T_BBleft_BB_n72_k12.txt
test/: Augmented.txt  MQT_uf.ipynb  circuitleveldecouple.ipynb  decoupling.py  decouplingrule.py  decouplingtest.py  get_bp_result.py  hpcodetiming.py  hz_trans.txt  main_test.py  maxcut.py  measure_order.py  measure_parr.py  measure_sparse.py  measure_sparse_108.py  measure_sparse_144.py  measure_sparse_144_d6.py  measure_sparse_288.py  measure_sparse_288_d6.py  measure_sparse_72.py  measure_sparse_90.py  measure_test.py  origin_bbcode.txt  setup.py  stim_test.py  stim_test_nomeas.py  stim_testparr copy.py  stim_testparr.py  test.ipynb  test.py  test_BPGD.ipynb  test_HPcode_d.ipynb  test_idea.ipynb  test_idea_V1.ipynb  test_idea_V2.ipynb  test_idea_V3.ipynb  test_idea_V3.py  test_idea_V4.py  timing.py
test/src/: c_util.c
(+73 files in other folders)
